[gd_scene load_steps=14 format=3 uid="uid://7b4uamk1ww8p"]

[ext_resource type="Script" path="res://rhythm/rhythm.gd" id="1_1kst2"]
[ext_resource type="Texture2D" uid="uid://kyjutf2rjloh" path="res://rhythm/instrument.png" id="1_44xy3"]
[ext_resource type="PackedScene" uid="uid://xrk332tlwqw4" path="res://rhythm/beat.tscn" id="3_groqn"]
[ext_resource type="Texture2D" uid="uid://cmawg8gkpnnnj" path="res://rhythm/beat.png" id="4_2dx05"]
[ext_resource type="Texture2D" uid="uid://dek65apns16sy" path="res://rhythm/precision.png" id="5_13nrc"]

[sub_resource type="Curve2D" id="Curve2D_o7k0u"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -9, 2, 0, 0, 0, 0, -133, 26)
}
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u0hhw"]
radius = 3.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fnve1"]
radius = 2.5
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tltp7"]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yneav"]
radius = 1.5
height = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fs7cm"]
radius = 1.0

[sub_resource type="Curve2D" id="Curve2D_r5gad"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 400, 0)
}
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_jumcl"]
radius = 1.0

[node name="Rhythm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1kst2")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.5
offset_top = -55.0
offset_right = 103.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_44xy3")
metadata/_edit_use_anchors_ = true

[node name="Track" type="Path2D" parent="."]
position = Vector2(207, 190)
curve = SubResource("Curve2D_o7k0u")

[node name="Accuracy" type="PathFollow2D" parent="Track"]
position = Vector2(-123.852, 24.2294)
rotation = 2.95041
progress = 116.93

[node name="ValidArea" type="Area2D" parent="Track/Accuracy"]
unique_name_in_owner = true
rotation = 1.5708
scale = Vector2(1, 1)
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Track/Accuracy/ValidArea"]
shape = SubResource("CapsuleShape2D_u0hhw")
debug_color = Color(0.334564, 1, 0.304688, 0.42)

[node name="Weak" type="Area2D" parent="Track/Accuracy"]
unique_name_in_owner = true
rotation = 1.5708
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Track/Accuracy/Weak"]
shape = SubResource("CapsuleShape2D_fnve1")
debug_color = Color(0.7, 0.155859, 0, 0.42)

[node name="Solid" type="Area2D" parent="Track/Accuracy"]
unique_name_in_owner = true
rotation = 1.5708
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Track/Accuracy/Solid"]
shape = SubResource("CapsuleShape2D_tltp7")
debug_color = Color(1, 0.942429, 0.330078, 0.42)

[node name="Perfect" type="Area2D" parent="Track/Accuracy"]
unique_name_in_owner = true
rotation = 1.5708
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Track/Accuracy/Perfect"]
shape = SubResource("CapsuleShape2D_yneav")

[node name="Miss" type="PathFollow2D" parent="Track"]
position = Vector2(-133, 26)
rotation = 2.95041
progress = 126.301

[node name="Miss" type="Area2D" parent="Track/Miss"]
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Track/Miss/Miss"]
shape = SubResource("CircleShape2D_fs7cm")

[node name="Tracks" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.372549)
position = Vector2(24, 173)

[node name="Track1" type="Path2D" parent="Tracks"]
visible = false
curve = SubResource("Curve2D_r5gad")

[node name="TestTrack" type="PathFollow2D" parent="Tracks/Track1"]
unique_name_in_owner = true

[node name="Area" type="Area2D" parent="Tracks/Track1/TestTrack"]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tracks/Track1/TestTrack/Area"]
shape = SubResource("CircleShape2D_jumcl")

[node name="Sprite2D" type="Sprite2D" parent="Tracks/Track1/TestTrack"]
position = Vector2(0, -11)
rotation = -1.5708
texture = ExtResource("4_2dx05")
hframes = 6

[node name="Beat" parent="Tracks/Track1" instance=ExtResource("3_groqn")]
position = Vector2(5.12453, 0)
progress = 5.0

[node name="Beat2" parent="Tracks/Track1" instance=ExtResource("3_groqn")]
position = Vector2(25.1476, 0)
progress = 25.0
face_left = false

[node name="Beat3" parent="Tracks/Track1" instance=ExtResource("3_groqn")]
position = Vector2(49.9915, 0)
progress = 50.0
face_left = false

[node name="Beat4" parent="Tracks/Track1" instance=ExtResource("3_groqn")]
position = Vector2(69.9972, 0)
progress = 70.0

[node name="Beat5" parent="Tracks/Track1" instance=ExtResource("3_groqn")]
position = Vector2(99.9955, 0)
progress = 100.0

[node name="Beat6" parent="Tracks/Track1" instance=ExtResource("3_groqn")]
position = Vector2(149.998, 0)
progress = 150.0

[node name="Beat7" parent="Tracks/Track1" instance=ExtResource("3_groqn")]
position = Vector2(179.999, 0)
progress = 180.0
face_left = false

[node name="AccuracyText" type="Sprite2D" parent="."]
visible = false
position = Vector2(99, 197)
texture = ExtResource("5_13nrc")
vframes = 5

[connection signal="area_entered" from="Track/Miss/Miss" to="." method="_on_miss_area_entered"]
